--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@formkit/tempo": "^0.1.2",
+    "@tailwindcss/vite": "^4.1.13",
     "axios": "^1.7.5",
     "js-cookie": "^3.0.5",
     "jwt-decode": "^4.0.0",
@@ -21,7 +22,8 @@
     "react-router-dom": "^6.26.1",
     "react-tabulator": "^0.21.0",
     "rut.js": "^2.1.0",
-    "sweetalert2": "^11.6.13"
+    "sweetalert2": "^11.6.13",
+    "tailwindcss": "^4.1.13"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.0",
