--- a/frontend/package.json
+++ b/frontend/package.json
@@ -22,19 +22,22 @@
     "react-router-dom": "^6.26.1",
     "react-tabulator": "^0.21.0",
     "rut.js": "^2.1.0",
-    "sweetalert2": "^11.6.13",
-    "tailwindcss": "^4.1.13"
+    "sweetalert2": "^11.6.13"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.0",
+    "@tailwindcss/postcss": "^4.x.x",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
     "@vitejs/plugin-react": "^4.3.1",
+    "autoprefixer": "^10.x.x",
     "eslint": "^9.9.0",
     "eslint-plugin-react": "^7.35.0",
     "eslint-plugin-react-hooks": "^5.1.0-rc.0",
     "eslint-plugin-react-refresh": "^0.4.9",
     "globals": "^15.9.0",
+    "postcss": "^8.5.6",
+    "tailwindcss": "^4.1.13",
     "vite": "^5.4.1"
   }
 }
