--- a/frontend/package.json
+++ b/frontend/package.json
@@ -7,7 +7,8 @@
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint .",
-    "preview": "vite preview --port=443"
+    "preview": "vite preview --port=443",
+    "lint:css": "stylelint \"src/**/*.css\""
   },
   "dependencies": {
     "@formkit/tempo": "^0.1.2",
@@ -37,6 +38,9 @@
     "eslint-plugin-react-refresh": "^0.4.9",
     "globals": "^15.9.0",
     "postcss": "^8.5.6",
+    "stylelint": "^16.24.0",
+    "stylelint-config-standard": "^39.0.0",
+    "stylelint-config-tailwindcss": "^1.0.0",
     "tailwindcss": "^4.1.13",
     "vite": "^5.4.1"
   }
