--- a/frontend/package.json
+++ b/frontend/package.json
@@ -20,6 +20,7 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.53.0",
+    "react-icons": "^5.5.0",
     "react-router-dom": "^6.26.1",
     "react-tabulator": "^0.21.0",
     "react-toastify": "^11.0.5",
