--- a/frontend/package.json
+++ b/frontend/package.json
@@ -22,10 +22,10 @@
     "react-hook-form": "^7.66.0",
     "react-icons": "^5.5.0",
     "react-router-dom": "^6.26.1",
-    "react-tabulator": "^0.21.0",
     "react-toastify": "^11.0.5",
     "rut.js": "^2.1.0",
-    "sweetalert2": "^11.6.13"
+    "sweetalert2": "^11.6.13",
+    "tabulator-tables": "^6.3.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.0",
